fix: harden and accelerate history archive